org_moved_to_kermeta2_git/kermeta/language/org.kermeta.language.checker/src/test/resources/resolved/invalid/GenericBounds/GenericBounds_prop_type_parameter_substitutability/project.kp
resource library_standard ="platform:/plugin/org.kermeta.language.library.standard" alternative "mvn:org.kermeta.language/language.library.standard/2.0.99-SNAPSHOT"
importProject library_standard
project GenericBounds_prop_type_parameter_substitutability {
	import "${project.baseUri}/001_GenericBounds_prop.kmt"
}
